{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 107,
  "lineage": "4dcd1510-0b82-d5e7-a7bf-59f840de893c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Nginx-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:internet-gateway/igw-01d52080b48b12b3e",
            "id": "igw-01d52080b48b12b3e",
            "owner_id": "053022822739",
            "tags": {
              "Name": "Nginx-igw"
            },
            "tags_all": {
              "Name": "Nginx-igw"
            },
            "vpc_id": "vpc-0acab5c8672f01301"
          },
          "dependencies": [
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:053022822739:loadbalancer/app/nginx-server-alb/b6da6704bc489a30",
            "arn_suffix": "app/nginx-server-alb/b6da6704bc489a30",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-server-alb-178872110.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:053022822739:loadbalancer/app/nginx-server-alb/b6da6704bc489a30",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-server-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0324a892396d5a951"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08237f7ee42d9804d"
              },
              {
                "subnet_id": "subnet-0a0a9ea2a5ebe727e"
              }
            ],
            "subnets": [
              "subnet-08237f7ee42d9804d",
              "subnet-0a0a9ea2a5ebe727e"
            ],
            "tags": {
              "Name": "nginx-server-alb"
            },
            "tags_all": {
              "Name": "nginx-server-alb"
            },
            "vpc_id": "vpc-0acab5c8672f01301",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.nginx_alb_sg",
            "aws_subnet.nginx_private_subnet_1",
            "aws_subnet.nginx_private_subnet_2",
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:053022822739:listener/app/nginx-server-alb/b6da6704bc489a30/5b92cd5f487a70ed",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:053022822739:targetgroup/nginx-server-tg/6d2abd38f8fb2320",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:053022822739:listener/app/nginx-server-alb/b6da6704bc489a30/5b92cd5f487a70ed",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:053022822739:loadbalancer/app/nginx-server-alb/b6da6704bc489a30",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx-alb",
            "aws_lb_target_group.Nginx_tg",
            "aws_security_group.nginx_alb_sg",
            "aws_subnet.nginx_private_subnet_1",
            "aws_subnet.nginx_private_subnet_2",
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:053022822739:targetgroup/nginx-server-tg/6d2abd38f8fb2320",
            "arn_suffix": "targetgroup/nginx-server-tg/6d2abd38f8fb2320",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:053022822739:targetgroup/nginx-server-tg/6d2abd38f8fb2320",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:053022822739:loadbalancer/app/nginx-server-alb/b6da6704bc489a30"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-server-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nginx-server-tg"
            },
            "tags_all": {
              "Name": "nginx-server-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0acab5c8672f01301"
          },
          "dependencies": [
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Nginx-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:route-table/rtb-0b625bce88abe8939",
            "id": "rtb-0b625bce88abe8939",
            "owner_id": "053022822739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d52080b48b12b3e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nginx-public-route-table"
            },
            "tags_all": {
              "Name": "Nginx-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acab5c8672f01301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Nginx-igw",
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associate_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e70d174af750643",
            "route_table_id": "rtb-0b625bce88abe8939",
            "subnet_id": "subnet-0a0a9ea2a5ebe727e"
          },
          "dependencies": [
            "aws_internet_gateway.Nginx-igw",
            "aws_route_table.Nginx-public-route-table",
            "aws_subnet.nginx_private_subnet_1",
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associate_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075e68061105963db",
            "route_table_id": "rtb-0b625bce88abe8939",
            "subnet_id": "subnet-08237f7ee42d9804d"
          },
          "dependencies": [
            "aws_internet_gateway.Nginx-igw",
            "aws_route_table.Nginx-public-route-table",
            "aws_subnet.nginx_private_subnet_2",
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:security-group/sg-048b6c2c3b3a45a0b",
            "description": "Security group for the EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048b6c2c3b3a45a0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0324a892396d5a951"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2SecurityGroup",
            "name_prefix": "",
            "owner_id": "053022822739",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-instance-sg"
            },
            "tags_all": {
              "Name": "nginx-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acab5c8672f01301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nginx_alb_sg",
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:security-group/sg-0324a892396d5a951",
            "description": "Security group for the Nginx Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0324a892396d5a951",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALBSecurityGroup",
            "name_prefix": "",
            "owner_id": "053022822739",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-alb-sg"
            },
            "tags_all": {
              "Name": "nginx-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acab5c8672f01301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:subnet/subnet-0a0a9ea2a5ebe727e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0a9ea2a5ebe727e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053022822739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nginx-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Nginx-Private-Subnet-1"
            },
            "vpc_id": "vpc-0acab5c8672f01301"
          },
          "dependencies": [
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:subnet/subnet-08237f7ee42d9804d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08237f7ee42d9804d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053022822739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nginx-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Nginx-Private-Subnet-2"
            },
            "vpc_id": "vpc-0acab5c8672f01301"
          },
          "dependencies": [
            "aws_vpc.Nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Nginx-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:vpc/vpc-0acab5c8672f01301",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07567c37f92881e33",
            "default_route_table_id": "rtb-043fb341c855c0546",
            "default_security_group_id": "sg-094e860e777cda855",
            "dhcp_options_id": "dopt-0c052233ad2b3bcd3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acab5c8672f01301",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043fb341c855c0546",
            "owner_id": "053022822739",
            "tags": {
              "Name": "Nginx-vpc"
            },
            "tags_all": {
              "Name": "Nginx-vpc"
            }
          }
        }
      ]
    }
  ]
}